@@ -11,6 +11,7 @@ author 'Michal Spacek <skim@cpan.org>';
 license 'bsd';
 name 'Task-Error-Pure';
 readme_from 'Pure.pm';
+recursive_author_tests('xt');
 requires 'Error::Pure' => 0.22;
 requires 'Error::Pure::Always' => 0.05;
 requires 'Error::Pure::HTTP' => 0.13;
